--- a/oasis/app/globals.css
+++ b/oasis/app/globals.css
@@ -120,3 +120,17 @@
     @apply bg-background text-foreground;
   }
 }
+
+  @layer components {
+    .underline-animation {
+      @apply relative;
+    }
+
+    .underline-animation::after {
+      @apply absolute content-[''] w-full h-[2px] bg-orange-500 bottom-0 left-0 scale-x-0 transition-transform duration-300;
+    }
+
+    .underline-animation:hover::after {
+      @apply scale-x-100;
+    }
+  }
